--- a/histogram/index.html
+++ b/histogram/index.html
@@ -28,7 +28,7 @@ var svg = d3.select("#my_dataviz")
           "translate(" + margin.left + "," + margin.top + ")");
 
 // get the data
-d3.csv("https://github.com/danielohata/d3-visualization/blob/master/histogram/1_OneNum.csv", function(data) {
+d3.csv("1_OneNum.csv", function(data) {
 
   // escala do valor de X
   var x = d3.scaleLinear()
