inclusão de legenda

--- a/boxplot/index.html
+++ b/boxplot/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 
+<title>Modelo de Boxplot</title>
+<body>
+<h2>Uso da base de dados iris para o calculo dos quartis<h2>
+
 <!-- Carrega o d3.js -->
 <script src="https://d3js.org/d3.v4.js"></script>
 
@@ -99,3 +103,4 @@ d3.csv("iris.csv", function(data) {
 })
 
 </script>
+</body>
