--- a/barras/index.html
+++ b/barras/index.html
@@ -2,6 +2,26 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 
+<title>Modelo de Barras Empilhadas</title>
+<body>
+<style>
+.fataltext{
+  color: #e41a1c;
+}
+.tratamentotext{
+  color: #377eb8;
+}
+.curadostext{
+  color: #4daf4a;
+}
+
+
+</style>
+<h2>Uso da base de dados da covid-19<h2>
+<h4 class="fataltext">Casos Fatais</h4>
+<h4 class="tratamentotext">Em tratamento</h4>
+<h4 class="curadostext">Curados</h4>
+
 
 <script src="https://d3js.org/d3.v4.js"></script>
 
