--- a/barras/index.html
+++ b/barras/index.html
@@ -14,13 +14,7 @@
 .curadostext{
   color: #4daf4a;
 }
-
-
 </style>
-<h2>Uso da base de dados da covid-19<h2>
-<h4 class="fataltext">Casos Fatais</h4>
-<h4 class="tratamentotext">Em tratamento</h4>
-<h4 class="curadostext">Curados</h4>
 
 
 <script src="https://d3js.org/d3.v4.js"></script>
@@ -98,3 +92,8 @@ d3.csv("covid.csv", function(data) {
 })
 
 </script>
+<h2>Uso da base de dados da covid-19<h2>
+<h4 class="fataltext">Casos Fatais</h4>
+<h4 class="tratamentotext">Em tratamento</h4>
+<h4 class="curadostext">Curados</h4>
+</body>
