--- a/barras/index.html
+++ b/barras/index.html
@@ -93,7 +93,5 @@ d3.csv("covid.csv", function(data) {
 
 </script>
 <h2>Uso da base de dados da covid-19<h2>
-<h4 class="fataltext">Casos Fatais</h4>
-<h4 class="tratamentotext">Em tratamento</h4>
-<h4 class="curadostext">Curados</h4>
+<h4 class="fataltext">Casos Fatais</h4> <h4 class="tratamentotext">Em tratamento</h4> <h4 class="curadostext">Curados</h4>
 </body>
