--- a/barras/index.html
+++ b/barras/index.html
@@ -17,7 +17,7 @@
 </style>
 
 <h2>Uso da base de dados da covid-19<h2>
-<h4 class="fataltext">Casos Fatais</h4> <h4 class="tratamentotext">Em tratamento</h4> <h4 class="curadostext">Curados</h4>
+<h4 class="curadostext">Curados</h4><h4 class="tratamentotext">Em tratamento</h4><h4 class="fataltext">Casos Fatais</h4>
 
 <script src="https://d3js.org/d3.v4.js"></script>
 
