--- a/dispersao/index.html
+++ b/dispersao/index.html
@@ -2,6 +2,23 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 
+<title>Modelo de Barras Empilhadas</title>
+<body>
+<style>
+.virginicatext{
+  color: #fde725ff;
+}
+.versicolortext{
+  color: #21908dff;
+}
+.setosatext{
+  color: #440154ff;
+}
+</style>
+
+<h2>Uso da base de dados da covid-19<h2>
+<h4 class="virginicatext">Virginica</h4><h4 class="versicolortext">Versicolor</h4><h4 class="setosatext">Setosa</h4>
+
 
 <script src="https://d3js.org/d3.v4.js"></script>
 
