--- a/dispersao/index.html
+++ b/dispersao/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 
-<title>Modelo de Barras Empilhadas</title>
+<title>Modelo Dispersão</title>
 <body>
 <style>
 .virginicatext{
@@ -16,7 +16,7 @@
 }
 </style>
 
-<h2>Uso da base de dados da covid-19<h2>
+<h2>Uso da base de dados Iris<h2>
 <h4 class="virginicatext">Virginica</h4><h4 class="versicolortext">Versicolor</h4><h4 class="setosatext">Setosa</h4>
 
 
