--- a/tarefa08-tendencias-multivariadas/index.html
+++ b/tarefa08-tendencias-multivariadas/index.html
@@ -68,7 +68,7 @@ d3.tsv("data.tsv", type, function(error, data) {
       .attr("y", 6)
       .attr("dy", "0.71em")
       .attr("fill", "#000")
-      .text("Temperature, ºF");
+      .text("Número de procuras");
 
   var city = g.selectAll(".city")
     .data(cities)
