--- a/hands-on1/index.html
+++ b/hands-on1/index.html
@@ -1,6 +1,6 @@
 <html>
 <html>
 <body>
-<img src="https://github.com/danielohata/d3-visualization/blob/master/hands-on1/text2mindmap_apple_family.png">
+<img src="https://danielohata.github.io/d3-visualization/hands-on1/text2mindmap_apple_family.png">
 </body>
 </html>
