--- a/hands-on3/index.html
+++ b/hands-on3/index.html
@@ -52,6 +52,7 @@
     </script>
   </head>
   <body>
+    <h1>Volume de negócios no mercado Global - Aumento e diminuição do mercado</h1>
     <div id="chart_div" style="width: 900px; height: 500px;"></div>
   </body>
 </html>
