--- a/hands-on2/index.html
+++ b/hands-on2/index.html
@@ -1,6 +1,6 @@
 <html>
 <html>
 <body>
-<img src="https://github.com/danielohata/d3-visualization/blob/master/hands-on2/handson2.png">
+<img src="https://danielohata.github.io/d3-visualization/hands-on2/handson2.png">
 </body>
 </html>
