--- a/tarefa15/index.html
+++ b/tarefa15/index.html
@@ -24,7 +24,7 @@ path.chord {
   </style>
 </head>
 <body>
-  <h1>Followers x Following</h1>
+  <h1>Seguidores e Seguindo</h1>
   <script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
   <script src="//d3js.org/queue.v1.min.js"></script>
   <script src="main.js"></script>
