--- a/hands-on3/index.html
+++ b/hands-on3/index.html
@@ -52,7 +52,8 @@
     </script>
   </head>
   <body>
-    <h1>Volume de negócios no mercado Global - Aumento e diminuição do mercado</h1>
+    <h1>Volume de negócios no mercado Global - Diminuição e Aumento do mercado</h1>
+    <h2>Clique nas regiões para ver a participação por países.</h2>
     <div id="chart_div" style="width: 900px; height: 500px;"></div>
   </body>
 </html>
