--- a/tarefa15/index.html
+++ b/tarefa15/index.html
@@ -25,6 +25,7 @@ path.chord {
 </head>
 <body>
   <h1>Seguidores e Seguindo</h1>
+  <h2>Modelo interativo</h2>
   <script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
   <script src="//d3js.org/queue.v1.min.js"></script>
   <script src="main.js"></script>
