--- a/tarefa13/index2.html
+++ b/tarefa13/index2.html
@@ -26,8 +26,8 @@ var svg = d3.select("#my_dataviz")
         "translate(" + margin.left + "," + margin.top + ")");
 
 // Read data
-//d3.csv('https://raw.githubusercontent.com/holtzy/D3-graph-gallery/master/DATA/data_hierarchy_1level.csv', function(data) 
-d3.csv('data.csv', function(data) 
+d3.csv('https://raw.githubusercontent.com/holtzy/D3-graph-gallery/master/DATA/data_hierarchy_1level.csv', function(data) 
+//d3.csv('data.csv', function(data) 
 {
 
   // stratify the data: reformatting for d3.js
