--- a/tarefa13/index.html
+++ b/tarefa13/index.html
@@ -26,7 +26,7 @@ var svg = d3.select("#my_dataviz")
         "translate(" + margin.left + "," + margin.top + ")");
 
 // read json data
-d3.csv("worldmarket.csv", function(data) {
+d3.json("flare.json", function(data) {
 
   // Give the data to this cluster layout:
   var root = d3.hierarchy(data).sum(function(d){ return d.value}) // Here the size of each leave is given in the 'value' field in input data
