--- a/tarefa13/index.html
+++ b/tarefa13/index.html
@@ -106,7 +106,7 @@ d3.json("flare.json", function(data) {
     .append("text")
       .attr("x", 0)
       .attr("y", 14)    // +20 to adjust position (lower)
-      .text("Os três países com melhor posição no quadro de medalhas")
+      .text("Os três melhores países na última olímpiada")
       .attr("font-size", "19px")
       .attr("fill",  "grey" )
 
